@@ -11,6 +11,7 @@ fixed bugs:
 - fixed bugs in parsing dis-/conjunctive constraints
 - fixed minor bug in conjunctive constraint handler printing wrong constraint
 - fixed bug in disjunctive constraint handler when enforcing a constraint
+- fixed bug with handling of empty logicor and bounddisjunction constraints
 
 features:
 - added delayed cutpool which only get separated if the sepastore is empty after a separation round
